--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,9 @@
 
 server.port=80
+#数据库连接池是HikariPool，号称性能比德鲁伊（提供监控工具）高一点，但几乎无感
 spring.datasource.username=root
 spring.datasource.password=^abc123$
 spring.datasource.url=jdbc:mysql://localhost:3306/ssm?characterEncoding=utf8&useSSL=false&serverTimezone=GMT-7
+mybatis.type-aliases-package=com.lisz.mapper
+#指向的是src/main/resources文件夹
+mybatis.mapper-locations=classpath:mybatis/mapper/*.xml
