Use the annotations to link the SQL and method and use logging.level.com.lisz.mapper=debug for log printing

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,4 @@ spring.datasource.url=jdbc:mysql://localhost:3306/ssm?characterEncoding=utf8&use
 mybatis.type-aliases-package=com.lisz.mapper
 #指向的是src/main/resources文件夹
 mybatis.mapper-locations=classpath:mybatis/mapper/*.xml
+logging.level.com.lisz.mapper=debug
