Add user functionality and copy the css and js files to this project and import and use the tags in html to enhance the styles

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,5 @@ mybatis.type-aliases-package=com.lisz.mapper
 #指向的是src/main/resources文件夹
 mybatis.mapper-locations=classpath:mybatis/mapper/*.xml
 logging.level.com.lisz.mapper=debug
+#开启myBatis的驼峰标识映射和下划线表示法的映射
+mybatis.configuration.map-underscore-to-camel-case=true
