PageHelper for the paging functionality with 'PageHelper.startPage(pageNumber, pageSize);' before the actually query. AOP involved.

--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,17 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-devtools</artifactId>
+		</dependency>
+		
+		<!-- 分页插件 改完这里要重新启动一下项目 https://mvnrepository.com/artifact/com.github.pagehelper/pagehelper-spring-boot-starter -->
+		<dependency>
+    		<groupId>com.github.pagehelper</groupId>
+    		<artifactId>pagehelper-spring-boot-starter</artifactId>
+    		<version>1.2.12</version>
+		</dependency>
 	</dependencies>
 
 	<build>
