--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,9 @@ server.port=80
 spring.datasource.username=root
 spring.datasource.password=^abc123$
 spring.datasource.url=jdbc:mysql://localhost:3306/ssm?characterEncoding=utf8&useSSL=false&serverTimezone=GMT-7
-mybatis.type-aliases-package=com.lisz.mapper
+# 自动补全实体类的包名称
+# 注意所有的实体类要都放在一个entity目录里，不能跟Example类在一起，因为Example中有类名重复的类，扫描entity的时候会报错
+mybatis.type-aliases-package=com.lisz.entity
 #指向的是src/main/resources文件夹
 mybatis.mapper-locations=classpath:mybatis/mapper/*.xml
 logging.level.com.lisz.mapper=debug
