Profile upload and add the profile_url column to DB table

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,5 @@ mybatis.mapper-locations=classpath:mybatis/mapper/*.xml
 logging.level.com.lisz.mapper=debug
 #开启myBatis的驼峰标识映射和下划线表示法的映射
 mybatis.configuration.map-underscore-to-camel-case=true
+#资源映射。把上传的目标目录C:/uploads映射到项目的根目录，不往Jar包里放
+spring.resources.static-locations=classpath:/static,classpath:/public,classpath:/resources,classpath:/META-INF/resources,file:/Users/shuzheng/Documents
