--- a/pom.xml
+++ b/pom.xml
@@ -54,6 +54,12 @@
     		<artifactId>pagehelper-spring-boot-starter</artifactId>
     		<version>1.2.12</version>
 		</dependency>
+		
+		<dependency>
+    		<groupId>org.apache.commons</groupId>
+    		<artifactId>commons-lang3</artifactId>
+    		<version>3.9</version>
+		</dependency>
 	</dependencies>
 
 	<build>
