--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,11 +6,13 @@ spring.datasource.password=^abc123$
 spring.datasource.url=jdbc:mysql://localhost:3306/ssm?characterEncoding=utf8&useSSL=false&serverTimezone=GMT-7&allowPublicKeyRetrieval=true
 # 自动补全实体类的包名称
 # 注意所有的实体类要都放在一个entity目录里，不能跟Example类在一起，因为Example中有类名重复的类，扫描entity的时候会报错
-mybatis.type-aliases-package=com.lisz.entity
+#mybatis.type-aliases-package=com.lisz.entity
 #指向的是src/main/resources文件夹
-mybatis.mapper-locations=classpath:mybatis/mapper/*.xml
+#mybatis.mapper-locations=classpath:mybatis/mapper/*.xml
 logging.level.com.lisz.mapper=debug
 #开启myBatis的驼峰标识映射和下划线表示法的映射
 mybatis.configuration.map-underscore-to-camel-case=true
 #资源映射。把上传的目标目录C:/uploads映射到项目的根目录，不往Jar包里放
 spring.resources.static-locations=classpath:/static,classpath:/public,classpath:/resources,classpath:/META-INF/resources,file:/Users/shuzheng/Documents
+#环境选择
+spring.profiles.active=dev
