--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,3 +16,6 @@ mybatis.configuration.map-underscore-to-camel-case=true
 spring.resources.static-locations=classpath:/static,classpath:/public,classpath:/resources,classpath:/META-INF/resources,file:/Users/shuzheng/Documents
 #环境选择
 spring.profiles.active=dev
+#最大上传size
+spring.servlet.multipart.max-file-size=2MB
+spring.servlet.multipart.max-request-size=5MB
