Add allowMultiQueries=true param to the jdbc url to enable multiple queries in a tag in mapper.xml, has defect: only the last permission is added

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,8 @@ server.port=80
 #数据库连接池是HikariPool，号称性能比德鲁伊（提供监控工具）高一点，但几乎无感
 spring.datasource.username=root
 spring.datasource.password=^abc123$
-spring.datasource.url=jdbc:mysql://localhost:3306/ssm?characterEncoding=utf8&useSSL=false&serverTimezone=GMT-7&allowPublicKeyRetrieval=true
+#allowMultiQueries=true支持在MyBatis中一个insert标签里写多条语句，用分号隔开
+spring.datasource.url=jdbc:mysql://localhost:3306/ssm?characterEncoding=utf8&useSSL=false&serverTimezone=GMT-7&allowPublicKeyRetrieval=true&allowMultiQueries=true
 # 自动补全实体类的包名称
 # 注意所有的实体类要都放在一个entity目录里，不能跟Example类在一起，因为Example中有类名重复的类，扫描entity的时候会报错
 #mybatis.type-aliases-package=com.lisz.entity
