--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -2,3 +2,7 @@ server.port=80
 #Chinese chars get from properties files are not able to be displayed properly in the web page
 #we have to type Chinese here and paste them to another properties file and paste the unicode back here.
 system.name=\u4E2D\u56FD\u77F3\u5316
+
+spring.datasource.username=root
+spring.datasource.password=^abc123$
+spring.datasource.url: jdbc:mysql://localhost:3306/ssm?characterEncoding=utf8&useSSL=false&serverTimezone=GMT-7&allowPublicKeyRetrieval=true&allowMultiQueries=true
