--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,2 +1,6 @@
 server.port=8083
 system.name=\u4E2D\u56FD\u77F3\u5316
+
+spring.datasource.username=root
+spring.datasource.password=^abc123$
+spring.datasource.url: jdbc:mysql://192.168.1.102:3306/ssm?characterEncoding=utf8&useSSL=false&serverTimezone=GMT-7&allowPublicKeyRetrieval=true&allowMultiQueries=true
