--- a/pom.xml
+++ b/pom.xml
@@ -60,6 +60,12 @@
     		<artifactId>commons-lang3</artifactId>
     		<version>3.9</version>
 		</dependency>
+		
+		<dependency>
+    		<groupId>com.github.tobato</groupId>
+    		<artifactId>fastdfs-client</artifactId>
+    		<version>1.26.7</version>
+		</dependency>
 	</dependencies>
 
 	<build>
