--- a/pom.xml
+++ b/pom.xml
@@ -66,6 +66,14 @@
     		<artifactId>fastdfs-client</artifactId>
     		<version>1.26.7</version>
 		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/com.google.guava/guava -->
+		<dependency>
+			<groupId>com.google.guava</groupId>
+			<artifactId>guava</artifactId>
+			<version>29.0-jre</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
