测试JSON序列化字符串和Locale

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -6,3 +6,4 @@ system.name=\u4E2D\u56FD\u77F3\u5316
 spring.datasource.username=root
 spring.datasource.password=^abc123$
 spring.datasource.url: jdbc:mysql://localhost:3306/ssm?characterEncoding=utf8&useSSL=false&serverTimezone=GMT-7&allowPublicKeyRetrieval=true&allowMultiQueries=true
+HOST="enumeration.corp.amazon.dev.com"
