添加关于 static-locations 资源映射的笔记

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,7 +13,7 @@ logging.level.com.lisz.mapper=debug
 #开启myBatis的驼峰标识映射和下划线表示法的映射
 mybatis.configuration.map-underscore-to-camel-case=true
 #资源映射。把上传的目标目录C:/uploads映射到项目的根目录，不往Jar包里放
-#https://liuyanzhao.com/7599.html spring.mvc.static-path-pattern默认值是/** https://www.cnblogs.com/yql1986/p/9219137.html
+#https://liuyanzhao.com/7599.html spring.mvc.static-path-pattern默认值是/** 表示url最后部位，任意的路径都可以作为映射源，去下面的指定的目录去找资源 https://www.cnblogs.com/yql1986/p/9219137.html
 spring.resources.static-locations=classpath:/static,classpath:/public,classpath:/resources,classpath:/META-INF/resources,file:/Users/shuzheng/Documents
 #环境选择
 #详见：https://blog.csdn.net/SwordSnapLiu/article/details/78540902
