--- a/pom.xml
+++ b/pom.xml
@@ -80,6 +80,17 @@
 			<version>1.18.12</version>
 			<scope>provided</scope>
 		</dependency>
+<!--		<dependency>-->
+<!--			<groupId>org.apache.hive</groupId>-->
+<!--			<artifactId>hive-jdbc</artifactId>-->
+<!--			<version>2.3.7</version>-->
+<!--		</dependency>-->
+		<dependency>
+			<groupId>org.apache.hive</groupId>
+			<artifactId>hive-exec</artifactId>
+			<version>2.3.7</version>
+		</dependency>
+
 
 	</dependencies>
 
